Completed most of the remaining sections
Added the following:
* Enterprise Level Considerations
* Sprint 5 (to be completed)
* Summary Section
* Appendices

--- a/bibliography/bibtex.bib
+++ b/bibliography/bibtex.bib
@@ -228,3 +228,20 @@
   year = {2017},
   urldate = {2018-03-22},	
 }
+
+
+@online{docker2,	
+  author = {Docker },
+  title = {Run multiple services in a container},
+  url = {https://docs.docker.com/config/containers/multi-service_container/},
+  year = {2018},
+  urldate = {2018-04-18},	
+}
+
+@online{kubernetes,	
+  author = {Kubernetes},
+  title = {Production-{G}rade {C}ontainer {O}rchestration},
+  url = {https://kubernetes.io/},
+  year = {2018},
+  urldate = {2018-04-18},	
+}
