--- a/body/implementation.tex
+++ b/body/implementation.tex
@@ -252,7 +252,7 @@
     \subsubsection{Personal Reflection}
     I was very pleased with the result of this sprint having completed the UI work. At this point an MVP was almost complete. I was very happy that I had taken the product owners advice to separate work on the backend and frontend. The benefits of this decision really showed during this sprint when I was able to focus almost exclusively on the UI, except for some minor refactoring.
     
-    Prior to starting this sprint I made the decision to focus on implementing a comprehensive UI for the MVP, choosing to push the CLI to the backlog and implemented it for during version 2. Due to the limited time to completed this project I felt that I could not satisfactorily implement both a UI and CLI. The only option would have been to complete only basic user features for the UI and advanced user features for the CLI. However, believe in order to deliver a useable and demonstrable system that at least one of the interfaces should be completed in it's entirety. Thus, made the decision to focus on the UI, which graphically emphasises the results of restorations. 
+    Prior to starting this sprint I made the decision to focus on implementing a comprehensive UI for the MVP, choosing to push the CLI to the backlog and implemented it for during version 2. Due to the limited time to completed this project I felt that I could not satisfactorily implement both a UI and CLI. The only option would have been to complete only basic user features for the UI and advanced user features for the CLI. However, believe in order to deliver a useable and demonstrable system that at least one of the interfaces should be completed in it's entirety. Thus, made the decision to focus on the UI, which graphically emphasises the results of restorations. \note[id=RB]{This explains and justifies the decision well.}
    
     During this week I also completed work on the email notification system. In retrospect I should implemented this function earlier as notification of failed backups is a main objective of the system. Also, during the development of the function a flaw in the systems logic was noticed which may cause the system to fail to notify the users when a backup process has not succeeded. Although I fix was easily implemented, it would have been preferable to notice and overcome this issues eariler in development.
     
@@ -302,7 +302,7 @@
 	\subsection{Sprint Metrics}
   
   \subsection{Sprint Velocities}
-  A Velocity Chart is shown in \autoref{fig:velocity}.  This shows the work committed to and completed in each of the sprints in terms of story points. The chart shows that initially the development time available during the sprints was being overestimated. Thus, in the first two sprints all tickets committed were not completed. However, by the third sprint this had been rectified, with better estimations and time management leading to  more consistent results.
+  A Velocity Chart is shown in \autoref{fig:velocity}.  This shows the work committed to and completed in each of the sprints in terms of story points. The chart shows that initially the development time available during the sprints was being overestimated. Thus, in the first two sprints all tickets committed were not completed. However, by the third sprint this had been rectified, with better estimations and time management leading to  more consistent results. \note[id=RB]{The chart looks good and you've explained the issue with the first two sprints well.Should there be a legend on the chart? What do the blue/light blue bars represent i.e. which is which?}
   
   \begin{figure}[H]
     \setlength{\belowcaptionskip}{15pt plus 3pt minus 2pt}
