--- a/body/summary.tex
+++ b/body/summary.tex
@@ -44,6 +44,8 @@
     \item A comprehensive frontend UI for users to use the API.
   \end{itemize}
   
+  \note[id=RB]{Excellent; and the stretch goals are clearly identified also.}
+  
   \subsubsection{Stretch Goals}
   The following stretch goals have been defined and remain on the product backlog for further development:
   
@@ -87,7 +89,7 @@
   I also found the prototyping stage to be of huge benefit. Initially I was unsure as to whether the project would be technically feasible. In the past I would have determined this only though beginning development and hoping to overcome issues as they arise. However, the product owners' recommendation and help in identifying the key areas of uncertainty and defining \textit{proof of concepts} accordingly was a valuable lesson. This is a lesson I will certainly remember for future projects i.e. identify problem areas before development begins and investigate their feasibility with a \textit{proof on concept} prototype.
   
   Overall I found the project be greatly beneficial to my growth as a developer. Accordingly, I would deem the project to be a personal success with many valuable lessons and experiences.
-  
+ \note[id=RB]{This section wraps things up perfectly - well done!}  
   
   
   
